[project]
name = "pincher_sdk"
version = "0.1.1a4"
description = "Library providing convenient access to the Pincher REST API from applications written in Python."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pyjwt>=2.12.1",
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "N"]

[dependency-groups]
dev = [
    "setuptools>=82.0.1",
    "twine>=6.2.0",
    "wheel>=0.46.3",
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = [
  "tests",
]
python_files = ["test_*.py"]
pythonpath = "src"
